Add temporary node merge strategy to node post/patch permission methods (#11)
